--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@
   </main>
 
   <!-- typed.js -->
-  <script src="assets/vendor/typed.js/typed.min.js"></scrip>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
       strings: ["Data Science Enthusiast", "Developer", "Fast Learner"],
