--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Siddheshwar's resume in a new tab" href="https://drive.google.com/file/d/1kq4ergZuBca5K2IAPol7iIzQRj4YQpdC/view?usp=sharing" target="_blank"
+        <a aria-label="Open Siddheshwar's resume in a new tab" href="https://drive.google.com/file/d/1TJD8QPXpHFIr5L_-bB6uwc8cjasnkaDC/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -201,7 +201,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Siddheshwar's Resume in a new tab"
-          href="https://drive.google.com/file/d/1kq4ergZuBca5K2IAPol7iIzQRj4YQpdC/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1TJD8QPXpHFIr5L_-bB6uwc8cjasnkaDC/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -1308,16 +1308,8 @@
             <div class="role brown-text text-darken-2">Geeks for Geeks Practice</div>
             <ul>
               <li>
-                Solved 195 problems on GeeksforGeeks with an institute rank of 14
+                Solved 211 problems on GeeksforGeeks with an institute rank of 14 and score of 519
               </li>
-              <!-- <li>
-                Built, Integrated and tested 15+ screens using React. 
-              </li> -->
-              <!-- <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li> -->
-              <!-- <li>
-                <b>Tools:</b> React, NodeJS, MongoDB
-              </li> -->
             </ul>
           </div>
           <div class="card-action">
