--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2021 - Present | Bhubaneswar, India</span>
+            <span>Dec 2021 - June 2022 | Bhubaneswar, India</span>
           </div>
         </div>
 
@@ -377,12 +377,15 @@
               </li>
               <li>Developed a food ordering application. Developed 15+ APIs and 20+ screens and integrated them.</li> -->
               <li>
+                Integrated Data Analytics/Insights tool <b>(MixPanel)</b> into the App
+              </li>
+              <li>
                 <b>Tools:</b> React-Native, React, NodeJS
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>March 2022 - Present | Bengaluru North, Karnataka</span>
+            <span>March 2022 - April 2022 | Bengaluru North, Karnataka</span>
           </div>
         </div>
 
@@ -417,7 +420,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>March 2022 - Present | Navi Mumbai, Maharasthra, India</span>
+            <span>March 2022 - July 2022 | Navi Mumbai, Maharasthra, India</span>
           </div>
         </div>
 
@@ -1308,7 +1311,7 @@
             <div class="role brown-text text-darken-2">Geeks for Geeks Practice</div>
             <ul>
               <li>
-                Solved 211 problems on GeeksforGeeks with an institute rank of 14 and score of 519
+                Solved 218 problems on GeeksforGeeks with an institute rank of 14 and score of 538
               </li>
             </ul>
           </div>
