--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@
               <li>
                 Worked in a Team of 15 developers and designers to develop and deploy an E-Commerce website from scratch using NextJS. 
               </li>
-              <!-- <li>
-                Analysed 10000 lines of code 
-              </li> -->
+              <li>
+                The link to the website: <a href="https://www.tradegully.com/" target="_blank">https://www.tradegully.com/</a>
+              </li>
               <!-- <li>
                 Lead a team of 3 ML interns for development of a smart AI chatbot to respond to users' query. This chatbot is to be a plug and play piece of code to be ready to embed into any sort of website viz. Healthcare, Movie recommendation, etc.
               </li>
@@ -592,7 +592,7 @@
             <div class="role brown-text text-darken-2">Summer Intern</div>
             <ul>
               <li>
-                Developed the main website of World Skill Center(Bhubaneswar) using HTML, CSS, JavaScript and Bootstrap and made significant contributions to backend and integration
+                Developed the main website of World Skill Center(Bhubaneswar) using HTML, CSS, JavaScript and Bootstrap and made significant contributions to backend and integration. The link to the website is: <a href="https://www.worldskillcenter.org/" target="_blank">https://www.worldskillcenter.org/</a>
               </li>
               <li>
                 Analysed and designed several screens and web-pages for a Healthcare company.
