--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Siddheshwar's resume in a new tab" href="https://drive.google.com/file/d/1TJD8QPXpHFIr5L_-bB6uwc8cjasnkaDC/view?usp=sharing" target="_blank"
+        <a aria-label="Open Siddheshwar's resume in a new tab" href="https://drive.google.com/file/d/10D-HHBzaUgmiMVoIoCTDJ_8aH-OrXOl8/view?usp=drivesdk" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -201,7 +201,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Siddheshwar's Resume in a new tab"
-          href="https://drive.google.com/file/d/1TJD8QPXpHFIr5L_-bB6uwc8cjasnkaDC/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/10D-HHBzaUgmiMVoIoCTDJ_8aH-OrXOl8/view?usp=drivesdk" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
