--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <!--
         ICONS:
         -->
-        <a aria-label="Navigate to the Education section" href="#achievements" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Achievements section" href="#achievements" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-school small"></i><span>Achievements</span></a>
       </li>
 
@@ -1409,10 +1409,10 @@
               aria-label="Call Siddheshwar">+918917358425</a></a>
         </p>
         <p>
-          <a aria-label="Email Siddheshwar" href="mailto:siddheshwar.2307@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Siddheshwar" href="mailto:siddheshwarcp.2307@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Siddheshwar" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Siddheshwar" href="mailto:siddheshwar.2307@gmail.com"
-              class="hoverline">siddheshwar.2307@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Siddheshwar" href="mailto:siddheshwarcp.2307@gmail.com"
+              class="hoverline">siddheshwarcp.2307@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Siddheshwar on GitHub" href="https://github.com/sidd2307" target="_blank"
@@ -1436,7 +1436,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Data Science Enthusiast", "Developer", "Fast Learner"],
+      strings: ["Full Stack Developer", "Fast Learner", "Data Science Enthusiast"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
